--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <p>This functionality is most useful on desktop devices when you have no access to physical (or app) Meetei Script keyboard. <br/>To know more or contribute, visit its GitHub repository <a href="https://github.com/ronhuidrom/mskey" style="text-decoration: none;">here</a>.</p>
   
-  <p>&copy; 2022 <a href="https://ronhuidrom.github.io/me" style="text-decoration: none;">Ronald Huidrom</a>.<br/>Follow him on <a href="https://github.com/ronhuidrom/" style="text-decoration: none;">GitHub</a>.</p>
+  <p>&copy; 2022 <a href="https://ronhuidrom.github.io/me" style="text-decoration: none;">Ronald Huidrom</a>.<br/>Follow him on <a href="https://github.com/huidr/" style="text-decoration: none;">GitHub</a>.</p>
 
   <script>
   function copyText() {
